--- a/components/api-new/api/Ballerina.toml
+++ b/components/api-new/api/Ballerina.toml
@@ -2,5 +2,12 @@
 org-name = "cellery_hub_api"
 version = "0.1.0"
 
+[platform]
+target = "java8"
 
-[dependencies]
+    [[platform.libraries]]
+    artifactId = "mysql-connector-java"
+    version = "5.1.6"
+    path = "/Library/Ballerina/ballerina-1.0.1/distributions/jballerina-1.0.1/bre/lib/mysql-connector-java-5.1.6.jar"
+    groupId = "mysql"
+    modules = ["core"]
